# porting-aws-iot-to-qcc74xSDK

./: .cproject  .project  CMakeLists.txt  LICENSE_BINARIES  LICENSE_SOURCES  NOTICE.txt  README.md  VERSION  project.build
components/: CMakeLists.txt
components/aws_iot/: CMakeLists.txt  FreeRTOSConfig.h  mbedtls_sample_config.h
components/aws_iot/Device-Defender/: CMakeLists.txt
components/aws_iot/Device-Shadow/: CMakeLists.txt
components/aws_iot/backoffAlgorithm/: CMakeLists.txt
components/aws_iot/common/: CMakeLists.txt
components/aws_iot/coreHTTP/: CMakeLists.txt
components/aws_iot/coreMQTT/: CMakeLists.txt
components/aws_iot/libraries/: CMakeLists.txt
components/aws_iot/network_transport/: CMakeLists.txt  network_transport.c  network_transport.h
components/easyflash4/inc/: easyflash.h
components/easyflash4/src/: easyflash_cli.c  ef_env.c  ef_iap.c  ef_port.c
components/esp_event/: CMakeLists.txt  README  default_event_loop.c  esp_event.c
components/esp_event/include/: esp_err.h  esp_event.h  esp_log.h
components/fs/romfs/: CMakeLists.txt  qcc74x_romfs.c  qcc74x_romfs.h
components/iperf/: iperf.c
components/libc/: CMakeLists.txt  printf.c  stdatomic.c  vprintf.c  vsnprintf.c
components/libc/newlib/: port_memory.c  port_time.c  port_tty.c  syscalls.c
components/mm/: CMakeLists.txt  mem.c  mem.h
components/mm/tlsf/: CMakeLists.txt  qcc74x_tlsf.c  tlsf.c
components/multimedia/: CMakeLists.txt
components/multimedia/drv_snd_qcc743/: CMakeLists.txt
components/multimedia/xav/: CMakeLists.txt
components/multimedia/xcodec/: CMakeLists.txt
components/multimedia/xport/: CMakeLists.txt
components/net/netbus/: CMakeLists.txt
components/os/: CMakeLists.txt
components/os/freertos/: CMakeLists.txt  freertos_port.c  tasks.c
components/os/tickless/: tickless_v1.c  tickless_v2.c
components/shell/: shell_config.h  shell_freertos.c
components/usb/cherryusb/: CMakeLists.txt
components/utils/: CMakeLists.txt
components/utils/coredump/: coredump.c  coredump.h  encoder_v1.c  encoder_v2.c
components/utils/getopt/: utils_getopt.c
components/utils/log/: log.c  log.h  log_freertos.c  qcc74x_dbg.h
components/utils/partition/: partition.c  partition.h
components/utils/qcc74x_block_pool/: qcc74x_block_pool.c  qcc74x_block_pool.h
components/utils/qcc74x_mtd/: qcc74x_boot2.c  qcc74x_mtd.c
components/utils/qcc74x_ota/: qcc74x_ota.c  qcc74x_ota.h
components/utils/qcc74x_timestamp/: qcc74x_timestamp.c  qcc74x_timestamp.h
components/utils/ring_buffer/: ring_buffer.c  ring_buffer.h
components/utils/tree/: tree.h
components/wireless/: CMakeLists.txt
components/wireless/bluetooth/: CMakeLists.txt  ble_common.cmake  ble_common.mk  version_btble_component.c
components/wireless/coex/: CMakeLists.txt  coex.h  coex_tdma.c
components/wireless/lmac154/: ChangeLog.md
components/wireless/lpfw_private/: CMakeLists.txt  lpfw_wifi.c
components/wireless/qcc74x_macsw/: CMakeLists.txt
components/wireless/thread/: ChangeLog.md
components/wireless/wifi6/: CMakeLists.txt
drivers/lhal/: CMakeLists.txt
drivers/lhal/include/: qcc74x_acomp.h  qcc74x_adc.h  qcc74x_auadc.h  qcc74x_audac.h  qcc74x_cam.h  qcc74x_cks.h  qcc74x_clock.h  qcc74x_common.h  qcc74x_core.h  qcc74x_csi.h  qcc74x_dac.h  qcc74x_dbi.h  qcc74x_dma.h  qcc74x_ef_ctrl.h  qcc74x_efuse.h  qcc74x_emac.h  qcc74x_flash.h  qcc74x_gpio.h  qcc74x_i2c.h  qcc74x_i2s.h  qcc74x_ir.h  qcc74x_irq.h  qcc74x_kys.h  qcc74x_l1c.h  qcc74x_list.h  qcc74x_mjpeg.h  qcc74x_mtimer.h  qcc74x_name.h  qcc74x_pwm_v1.h  qcc74x_pwm_v2.h  qcc74x_rtc.h  qcc74x_sdh.h  qcc74x_sdio2.h  qcc74x_sec_aes.h  qcc74x_sec_dsa.h  qcc74x_sec_ecdsa.h  qcc74x_sec_gmac.h  qcc74x_sec_irq.h  qcc74x_sec_pka.h  qcc74x_sec_sha.h  (+7 more)
drivers/lhal/src/: qcc74x_acomp.c  qcc74x_adc.c  qcc74x_auadc.c  qcc74x_audac.c  qcc74x_cam.c  qcc74x_cks.c  qcc74x_clock.c  qcc74x_common.c  qcc74x_csi.c  qcc74x_dac.c  qcc74x_dbi.c  qcc74x_dma.c  qcc74x_ef_ctrl.c  qcc74x_emac.c  qcc74x_flash.c  qcc74x_gpio.c  qcc74x_i2c.c  qcc74x_i2s.c  qcc74x_ir.c  qcc74x_irq.c  qcc74x_kys.c  qcc74x_l1c.c  qcc74x_mjpeg.c  qcc74x_mtimer.c  qcc74x_pwm_v1.c  qcc74x_pwm_v2.c  qcc74x_rtc.c  qcc74x_sdh.c  qcc74x_sdio2.c  qcc74x_sec_aes.c  qcc74x_sec_gmac.c  qcc74x_sec_irq.c  qcc74x_sec_sha.c  qcc74x_sec_trng.c  qcc74x_spi.c  qcc74x_spi_psram.c  qcc74x_timer.c  qcc74x_uart.c  qcc74x_usb_v1.c  qcc74x_usb_v2.c  (+2 more)
examples/audio/player_mp3/: CMakeLists.txt  FreeRTOSConfig.h  README.md  README_zh.md  flash_prog_cfg.ini  multimedia_user.h  proj.conf
examples/boot2_isp/: CMakeLists.txt  Makefile  README.md  boot2_release.py  flash_prog_cfg.ini  main.c  partition.c  partition.h  proj.conf  qcc74x_eflash_loader.h  qcc74x_eflash_loader_cmds.c  qcc74x_eflash_loader_cmds.h  qcc74x_eflash_loader_interface.c  qcc74x_eflash_loader_interface.h  qcc74x_eflash_loader_uart.c  qcc74x_eflash_loader_uart.h  qcc74x_eflash_loader_usb.c  qcc74x_eflash_loader_usb.h  qcc74xsp_boot_decompress.c  qcc74xsp_boot_decompress.h  qcc74xsp_boot_parser.c  qcc74xsp_boot_parser.h  qcc74xsp_bootinfo.h  qcc74xsp_common.c  qcc74xsp_common.h  qcc74xsp_media_boot.c  qcc74xsp_media_boot.h  qcc74xsp_port.c  qcc74xsp_port.h  qcc74xsp_ram_image_boot.c  rv32i_xtheade_lz4.S
examples/lvgl/: CMakeLists.txt  Makefile  README.md  flash_prog_cfg.ini  lcd_conf_user.h  lv_conf.h  main.c  proj.conf
examples/matter/thread/: CMakeLists.txt  Makefile  Matter_factory_data.md  README.md  checkout_matter_code.py  flash_prog_cfg.ini  main.c  matter_prepare_build.sh  mbedtls_sample_config.h  openthread-core-proj-config.h  proj.conf
examples/mfg_test/: CMakeLists.txt  Makefile  flash_prog_cfg.ini  main.c  mfg_atcmd.c  mfg_atcmd.h  mfg_atcmd_port.c  mfg_atcmd_port.h  mfg_m154.c  mfg_m154.h  mfg_main.c  mfg_main.h  mfg_otp.c  mfg_otp.h  mfg_sdio.c  mfg_sdio.h  mfg_sdu.c  mfg_sdu.h  modify_dts_flash_prog_cfg.ini  proj.conf
examples/pmu/wl_lp/: CMakeLists.txt  README.md  app_clock_manager.c  flash_prog_cfg.ini  lwipopts_user.h  main.c  proj.conf  wl_lp_app.c
examples/thread/openthread_cli/: CMakeLists.txt  FreeRTOSConfig.h  main.c  (+3 more)
(+1964 files in other folders)
