add_subdirectory(qcc74x_fhost)
add_subdirectory(qcc74x_wpa_supplicant)
add_subdirectory(wifi6_lwip_adapter)
add_subdirectory(qcc74x_os_adapter)

# Enable common section for wifi6
# sdk_add_compile_options(-fcommon)

# disable undef warning
# sdk_add_compile_options(-Wno-undef)

sdk_add_compile_definitions(-DCFG_RTOS)
sdk_add_compile_definitions(-DCFG_FHOST)
sdk_add_compile_definitions(-DCFG_UMAC) # (NX_AMPDU_RX)CFG_BARX, (NX_AMPDU_RX_BUF_SIZE)CFG_REORD_BUF
sdk_add_compile_definitions(-DCFG_STATS)
sdk_add_compile_definitions(-DCFG_WIFI_DBG=2)
sdk_add_compile_definitions(-DCFG_REC)
sdk_add_compile_definitions(-DCFG_BCN) # NX_BEACONING
sdk_add_compile_definitions(-DCFG_AGG) # NX_MAX_BA_TX(CFG_BATX)
sdk_add_compile_definitions(-DCFG_AMSDU_4K)
sdk_add_compile_definitions(-DCFG_VIF_MAX=2)
sdk_add_compile_definitions(-DCFG_STA_MAX=4)
sdk_add_compile_definitions(-DCFG_SPC=16)
if(CONFIG_WFA)
    sdk_add_compile_definitions(-DCFG_TXDESC0=4)
    sdk_add_compile_definitions(-DCFG_TXDESC1=16)
    sdk_add_compile_definitions(-DCFG_TXDESC2=1)
    sdk_add_compile_definitions(-DCFG_TXDESC3=4)
    sdk_add_compile_definitions(-DCFG_TXDESC4=4)
else()
    sdk_add_compile_definitions(-DCFG_TXDESC0=1)
    sdk_add_compile_definitions(-DCFG_TXDESC1=32)
    sdk_add_compile_definitions(-DCFG_TXDESC2=1)
    sdk_add_compile_definitions(-DCFG_TXDESC3=1)
    sdk_add_compile_definitions(-DCFG_TXDESC4=4)
    sdk_add_compile_definitions(-DCFG_COEX)
    sdk_add_compile_definitions(-DCONFIG_UNSINGLE_MAC_ADDR)
endif()
sdk_add_compile_definitions(-DCFG_MAC_VER_V21)
sdk_add_compile_definitions(-DCFG_MDM_VER_V30)
sdk_add_compile_definitions(-DCFG_IPC_VER_V11)
sdk_add_compile_definitions(-DCFG_PLF_VER_V30)
sdk_add_compile_definitions(-DCFG_PS)
sdk_add_compile_definitions(-DCFG_MU_CNT=1)
sdk_add_compile_definitions(-DCFG_UAPSD)
sdk_add_compile_definitions(-DCFG_KEYCFG)
sdk_add_compile_definitions(-DCFG_P2P=0)
sdk_add_compile_definitions(-DCFG_P2P_GO)
sdk_add_compile_definitions(-DCFG_BWLEN)
sdk_add_compile_definitions(-DCFG_HE)
sdk_add_compile_definitions(-DCFG_TWT=8)
if(CONFIG_WFA)
    sdk_add_compile_definitions(-DCFG_BARX=4)
    sdk_add_compile_definitions(-DCFG_BATX=4)
    sdk_add_compile_definitions(-DCFG_REORD_BUF=8)
else()
    sdk_add_compile_definitions(-DCFG_BARX=2)
    sdk_add_compile_definitions(-DCFG_BATX=1)
    sdk_add_compile_definitions(-DCFG_REORD_BUF=12)
endif()
sdk_add_compile_definitions(-DCFG_DBGDUMPKEY)
#sdk_add_compile_definitions(-DCFG_TRACE)
sdk_add_compile_definitions(-DCFG_UF)
sdk_add_compile_definitions(-DCFG_MFP)
#sdk_add_compile_definitions(-DCFG_FTM_INIT)
#sdk_add_compile_definitions(-DCFG_FTM_RSP)
sdk_add_compile_definitions(-DCFG_HSU=0)
sdk_add_compile_definitions(-DCFG_CRYPTO)
sdk_add_compile_definitions(-DCFG_FHOST_MONITOR)
sdk_add_compile_definitions(-DCFG_IPERF)
sdk_add_compile_definitions_ifdef(CONFIG_WIFI_TG -DCFG_TG)
if(CONFIG_WFA)
    sdk_add_compile_definitions(-DCFG_PLATFORM_DMA_ENABLE=1)
    sdk_add_compile_definitions(-DCONFIG_WFA)
elseif(CONFIG_LPAPP)
    sdk_add_compile_definitions(-DCFG_QCC74x_WIFI_PS_ENABLE)
    sdk_add_compile_definitions(-DWPA_SUPPLICANT_CLEANUP_INTERVAL=1800)
    sdk_add_compile_definitions(-DQCC74x_RA_EN=1)
elseif(CONFIG_COEX_WIFI_MODE)
elseif(CONFIG_ADHOC)
    sdk_add_compile_definitions(-DCFG_ADHOC_ENABLE)
    sdk_add_compile_definitions(-DCFG_RAW_SEND_ENABLE)
else()
    sdk_add_compile_definitions(-DCONFIG_HIGH_PERFORMANCE=1)
    sdk_add_compile_definitions(-DCFG_PLATFORM_DMA_ENABLE=1)
endif()
sdk_add_compile_definitions(-DCFG_SMARTCONFIG)
sdk_add_compile_definitions(-DQCC743_IOTSDK)
sdk_add_compile_definitions(-DWL_BB_TPC=1)
sdk_add_compile_definitions(-DWL_BB_PD=1)

#sdk_add_compile_definitions(-DCONFIG_VIF_MAX=${CONFIG_VIF_MAX})
#sdk_add_compile_definitions(-DCONFIG_STA_MAX=${CONFIG_STA_MAX})
sdk_add_compile_definitions(-DCONFIG_MAC_TXQ_DEPTH=${CONFIG_MAC_TXQ_DEPTH})
sdk_add_compile_definitions(-DCONFIG_MAC_RXQ_DEPTH=${CONFIG_MAC_RXQ_DEPTH})
sdk_add_compile_definitions(-D__FILENAME__=__FILE__)
sdk_add_compile_definitions_ifdef(CONFIG_CSIDMA_CLI -DCFG_CSIDMA_CLI=1)

sdk_add_compile_definitions_ifdef(CONFIG_IPV6 -DCFG_IPV6)

if(CONFIG_COEX_WIFI_MODE)
sdk_add_compile_definitions(-DCONFIG_COEX_WIFI_MODE=${CONFIG_COEX_WIFI_MODE})
else()
sdk_add_compile_definitions(-DCONFIG_COEX_WIFI_MODE=0)
endif()

sdk_add_compile_definitions(-DCONFIG_ANTDIV_STATIC)
sdk_add_compile_definitions(-DCONFIG_ANTDIV_DYNAMIC)
#add_subdirectory(antdiv_hal)
